# TheNewPrinter

./: .gitignore  README.md  install_with_uv.sh  pyproject.toml  requirements.txt  setup.py
new_printer/: __init__.py  cli.py  config.py  models.py  utils.py
new_printer/extractors/: __init__.py  content_cleaner.py  extractor_factory.py  image_extractor.py  readability_fallback.py  trafilatura_extractor.py  url_validator.py
new_printer/processors/: __init__.py  image_processor.py  markdown_converter.py  pandoc_runner.py
new_printer/templates/: article.latex  columns.lua  config.yaml  magazine.latex
new_printer/web_ui/: server.py
new_printer/web_ui/templates/: index.html
prd/: prd.mdc
tasks/: tasks-prd.md
web_ui/: __init__.py
